<resources>
    <string name="app_name">Maktaba-android-frontend-mvp</string>

    <string name="navigation_drawer_profile_open">Open navigation drawer profile</string>
    <string name="navigation_drawer_profile_close">Close navigation drawer profile</string>

    <string name="carousel_title_first">Recommended\nreading for you</string>
    <string name="carousel_title_first_arabic">أوصت القراءة\nبالنسبة لك</string>

    <string name="carousel_title_second">Based on your purchase history</string>
    <string name="carousel_title_second_arabic">استنادًا إلى سجل الشراء</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="book_store">Book Store</string>
    <string name="book_store_arabic">مكتبة لبيع الكتب</string>

    <string name="more_reviews">More reviews</string>
    <string name="about_the_author">About the author</string>
    <string name="more_books_from_this_author">More Books from this Author</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_genre">Select genre</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="price">$9.99</string>
    <string name="number_rating">(188)</string>
    <string name="author_review">Author Review</string>
    <string name="comment_review">Comment Review</string>
    <string name="open_genre">Open genre</string>
    <string name="store">Store</string>
    <string name="library">Library</string>
    <string name="back">Back</string>
    <string name="browse">Browse</string>
    <string name="recommended">Recommended</string>

    <string name="view_all">View all</string>
    <string name="view_all_arabic">عرض الكل</string>

    <string name="not_found_what_you_re_looking_for">Not found what you\'re looking for ?</string>
    <string name="not_found_what_you_re_looking_for_arabic">لم يتم العثور على ما تبحث عنه؟</string>

    <string name="search_or_browse_categories">
        Search or browse categories to access your upcoming story
    </string>
    <string name="search_or_browse_categories_arabic">
        ابحث أو تصفح الفئات للوصول إلى قصتك القادمة
    </string>

    <string name="browse_sections">Browse sections</string>
    <string name="browse_sections_arabic">تصفح الفئات</string>

    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="profile_name">Jane Doe</string>
    <string name="profile_email">jane.doe@gmail.com</string>

    <string name="help">Help</string>
    <string name="wish_list">Wish list</string>

    <string name="sections">Sections</string>
    <string name="section_name">Section name</string>

    <string name="sort">Sort</string>
    <string name="sort_arabic">فرز</string>

    <string name="add_to_wish_list">Add to Wish list</string>
    <string name="add_to_wish_list_arabic">أضف إلى قائمة الامنيات</string>

    <string name="try_the_sample">Try the sample</string>
    <string name="try_the_sample_arabic">حاول عينة</string>

    <string name="buy">Buy</string>
    <string name="buy_arabic">يشترى</string>

    <string name="title_category">Title Category</string>
    <string name="content_category">Content Category</string>

    <string name="resume_book">The novel "The Prophet" is engraved in the modern history of Iraq,
        evoking a glowing time lived by the journalist Taj Majol Abdul Majeed in the era of the monarchy,
        the first magazine in Baghdad, and has ties with Prime Minister Nouri al-Saeed and with the guardian
        of the throne Abdul Ilah.
    </string>
    <string name="resume_book_arabic">رواية "النبي" محفورة في التاريخ الحديث للعراق ،
        تستحضر وقتًا متوهجًا يعيشه الصحفي تاج مجول عبد المجيد في عهد الملكية ،
        المجلة الأولى في بغداد ، ولها علاقات مع رئيس الوزراء نوري السعيد ومع الوصي
        العرش عبد الإله.
    </string>

    <string name="read_more">Read More</string>
    <string name="read_more_arabic">اقرأ المزيد</string>

    <string name="view_all_reviews">View all reviews</string>
    <string name="view_all_reviews_arabic">عرض جميع الاستعراضات</string>

    <string name="find_the_books_you_love">Find the books you love</string>
    <string name="search_by">Search by title, author, genre, country, publisher or word</string>
    <string name="results">Results</string>
    <string name="art">Art</string>
    <string name="business">Business</string>
    <string name="download_book">Download Book</string>
    <string name="action">Action</string>
    <string name="maktaba">Maktaba</string>

    <string name="title_first_recyclerview">Recommended Authors</string>
    <string name="title_first_recyclerview_arabic">مستوحاة من تاريخك</string>

    <string name="title_second_recyclerview">Inspired by Your Reading History</string>
    <string name="title_second_recyclerview_arabic">المزيد من الخيال</string>

    <string name="title_small_recyclerview">Other Books for you</string>
    <string name="title_small_recyclerview_arabic">المزيد من القراءة لك</string>

    <string name="title_popular_species_recyclerview">Popular species</string>
    <string name="title_popular_species_recyclerview_arabic">الأنواع الشعبية</string>

    <string name="title_review_overview_recyclerview">More Books from this Authors</string>
    <string name="title_review_overview_recyclerview_arabic">المزيد من الخيال</string>

    <string name="download_tab">Download</string>
    <string name="download_tab_arabic">تحميل</string>

    <string name="groups_tab">Groups</string>
    <string name="groups_tab_arabic">مجموعات</string>

    <string name="allbooks_tab">All Books</string>
    <string name="allbooks_tab_arabic">كل الكتب</string>

    <string name="review_tab">Reviews</string>
    <string name="review_tab_arabic">استعراض</string>

    <string name="overview_tab">Overview</string>
    <string name="overview_tab_arabic">نظرة عامة</string>

    <string name="length">Length</string>
    <string name="length_arabic">الطول</string>

    <string name="file_size">File size</string>
    <string name="file_size_arabic">حجم الملف</string>

    <string name="date_publication">Date of publication</string>
    <string name="date_publication_arabic">تاريخ النشر</string>

    <string name="genre">Genre</string>
    <string name="genre_arabic">نوع أدبي</string>

    <string name="country">Country</string>
    <string name="country_arabic">البلد</string>

    <string name="publisher">Publisher</string>
    <string name="publisher_arabic">الناشر</string>
</resources>