<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="190dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:background="@color/colorAccent"
            android:gravity="bottom"
            android:padding="16dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/profile_picture"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/profile_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/profile_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>

</RelativeLayout>