<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/colorTextBlack">

    <group
            android:checkableBehavior="single">

        <item
                android:id="@+id/nav_art"
                android:title="@string/art"/>

        <item
                android:id="@+id/nav_business"
                android:title="@string/business"/>

        <item
                android:id="@+id/nav_help_tips"
                android:title="@string/help"/>

        <item
                android:id="@+id/nav_computing"
                android:title="Computing"/>

        <item
                android:id="@+id/nav_education"
                android:title="Education"/>

        <item
                android:id="@+id/nav_health"
                android:title="Health"/>

        <item
                android:id="@+id/nav_home_garden"
                android:title="Home &amp; Garden"/>

        <item
                android:id="@+id/nav_literature"
                android:title="Literature"/>

        <item
                android:id="@+id/nav_family"
                android:title="Family"/>

        <item
                android:id="@+id/nav_professionals"
                android:title="Professionals"/>

        <item
                android:id="@+id/nav_romantic"
                android:title="Romantic"/>

        <item
                android:id="@+id/nav_science_fiction"
                android:title="Science-Fiction"/>

    </group>

</menu>