<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="107dp"
        android:layout_height="284dp"
        android:layout_margin="8dp"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        android:background="@android:color/transparent">

    <ImageView
            android:id="@+id/horizontal_image"
            android:src="@drawable/forest_small"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"/>

    <TextView
            android:id="@+id/horizontal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_image"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:paddingBottom="2dp"/>

    <TextView
            android:id="@+id/horizontal_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_title"
            android:text="@string/author"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:paddingBottom="2dp"/>

    <TextView
            android:id="@+id/horizontal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_author"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

</RelativeLayout>