<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="134dp"
        android:layout_height="320dp"
        android:layout_margin="10dp"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        android:background="@android:color/transparent">

    <ImageView
            android:id="@+id/horizontal_image"
            android:src="@drawable/book1"
            android:scaleType="centerCrop"
            android:layout_width="134dp"
            android:layout_height="204dp"
            android:layout_marginTop="2dp"
            android:adjustViewBounds="true"/>

    <TextView
            android:id="@+id/horizontal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_image"
            android:text="@string/title"
            android:textColor="@color/colorTextBlack"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingTop="9dp"
            android:paddingBottom="3dp"/>

    <TextView
            android:id="@+id/horizontal_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_title"
            android:text="@string/author"
            android:textColor="@color/colorTextGrey"
            android:textSize="12sp"
            android:paddingBottom="6dp"/>

    <RatingBar
            android:id="@+id/horizontal_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_author"
            android:paddingBottom="6dp"
            style="@style/RatingBarBig"/>

    <TextView
            android:id="@+id/horizontal_number_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_author"
            android:layout_toEndOf="@+id/horizontal_rating_bar"
            android:text="@string/number_rating"
            android:textColor="@color/colorTextBlack"
            android:textSize="10sp"
            android:paddingStart="2dp"
            tools:ignore="RtlSymmetry,SmallSp"/>

    <TextView
            android:id="@+id/horizontal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_rating_bar"
            android:text="@string/price"
            android:textColor="@color/colorTextBlack"
            android:textSize="12sp"/>

</RelativeLayout>