<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
            android:id="@+id/button_close_profile"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="23dp"
            android:background="@drawable/cancel"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCarouselGrey"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:src="@drawable/portrait_profile"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:contentDescription="@string/profile_picture"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorTextBlack"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"
                android:textColor="@color/colorTextGrey"/>

    </LinearLayout>

</RelativeLayout>