<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/colorCarouselGrey"
        android:orientation="vertical"
        android:paddingTop="100dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="37dp"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/carousel_title_first"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextBlack"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/carousel_title_second"
                android:textSize="12sp"
                android:textColor="@color/colorTextGrey"
                android:paddingTop="5dp"
                android:id="@+id/title_bis_carousel"/>

    </LinearLayout>

    <RelativeLayout
            android:id="@+id/imagePreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

        <com.yarolegovich.discretescrollview.DiscreteScrollView
                android:id="@+id/discrete_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsv_orientation="horizontal"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="33dp"
            android:paddingBottom="31dp"
            android:paddingEnd="35dp"
            tools:ignore="RtlSymmetry">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:text="@string/view_all"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textColor="@color/colorTextGrey"
                android:background="@android:color/transparent"
                tools:ignore="SmallSp"/>

    </RelativeLayout>

</LinearLayout>